--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -7,17 +7,26 @@
     >
 
     <LinearLayout
+        android:id="@+id/canvasLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical"
+        android:background="@color/black"
+        android:layout_weight="1"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This is some Text"
+
+
+        <karavangelos.com.operator.gameparts.CanvasView
+
+            android:id="@+id/canvasView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dip"
+
             />
+
+
 
         </LinearLayout>
 
