refactored user horizontal and vertical bars so that they are able to be dynamically controlled by the player.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_gray">#999999</color>
 
 
 </resources>
