--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -35,37 +35,61 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="2"
-        android:weightSum="8"
+        android:weightSum="10"
         >
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/score"
+            android:layout_weight="1"
+            />
+
+        <TextView
             android:id="@+id/scoreTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/score"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_weight="2"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lives_left"
+            android:gravity="center"
+            android:layout_weight="1"
             />
 
         <TextView
             android:id="@+id/livesTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lives_left"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_weight="2"
             />
 
         <TextView
-            android:id="@+id/powerTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/power_up"
-            android:layout_weight="0.36"
+            android:gravity="center"
+            android:layout_weight="1"
             />
 
         <Button
             android:id="@+id/powerButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="@string/inactive"
             android:layout_weight="1"
             />
@@ -74,6 +98,8 @@
             android:id="@+id/pauseButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="@string/pause"
             android:layout_weight="1"
             />
