Added preliminary countdown timer

--- a/app/src/main/res/layout/action_bar_game_fragment.xml
+++ b/app/src/main/res/layout/action_bar_game_fragment.xml
@@ -10,7 +10,7 @@
         android:id="@+id/gameBarTimerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello iver ther"
+        android:text="Time Left: "
         android:gravity="left"
         android:textColor="@color/white"
         android:layout_marginTop="12dp"
@@ -24,7 +24,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:text="Hello iver ther"
         android:textColor="@color/white"
         android:layout_marginTop="12dp"
         android:layout_marginRight="5dp"
