--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#999999</color>
-    <color name="red">#FF0000</color>
-    <color name="green">#00FF00</color>
-    <color name="blue">#0000FF</color>
+    <color name="red">#BB0000</color>
+    <color name="green">#00BB00</color>
+    <color name="blue">#0000BB</color>
     <color name="pink">#FF69B4</color>
 
 
