Refined pause logic so that timer and quadrants are responding to the pause button correctly while in game.

--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -102,6 +102,7 @@
             android:textStyle="bold"
             android:text="@string/pause"
             android:layout_weight="1"
+            android:clickable="false"
             />
 
         <Button
