Changed power up button to change color button and added logic for pausing the game when the game fragment leaves the front of the stack (onPause)

--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -85,13 +85,14 @@
             />
 
         <Button
-            android:id="@+id/powerButton"
+            android:id="@+id/changeColorButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="@string/inactive"
+            android:text="@string/change_color"
             android:layout_weight="1"
+            android:clickable="false"
             />
 
         <Button
