Added preliminary pieces to set up the high scores list view

--- a/app/src/main/res/layout/high_scores_layout.xml
+++ b/app/src/main/res/layout/high_scores_layout.xml
@@ -3,12 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="5"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
         >
 
 
@@ -25,15 +27,15 @@
             />
     </RelativeLayout>
 
-    <RelativeLayout
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="6"
-        >
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        class="karavangelos.com.operator.fragments.HighScoresListFragment"
+
+        />
 
 
-
-    </RelativeLayout>
 
 
 
