--- a/app/src/main/res/layout/high_scores_list_item.xml
+++ b/app/src/main/res/layout/high_scores_list_item.xml
@@ -1,74 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scoresListItemContainerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="4"
+    android:orientation="horizontal"
+    >
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Number"
+        android:id="@+id/scoreIndexTextView"
+        android:textColor="@color/black"
+        android:layout_marginTop="26dp"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="1"
+        />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Score"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_marginTop="29dp"
-        android:layout_marginLeft="10dp"
+        android:id="@+id/scoreTextView"
+        android:layout_marginTop="26dp"
         android:textColor="@color/black"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="1"
         />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Level Reached"
-        android:id="@+id/textView4"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Date of Score"
-        android:id="@+id/textView5"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView6"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_centerHorizontal="true"
+        android:text="Level"
+        android:id="@+id/levelTextView"
         android:textColor="@color/black"
+        android:layout_marginTop="26dp"
+        android:layout_weight="1"
         />
 
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView7"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
+        android:text="Date"
+        android:id="@+id/dateTextView"
         android:textColor="@color/black"
+        android:layout_alignTop="@+id/scoreTextView"
+        android:layout_marginTop="26dp"
+        android:layout_weight="1"
         />
-</RelativeLayout>
+
+
+
+
+</LinearLayout>
