SQLite is now connected to the high scores adapter to make for dynamic presentation of high scores.

--- a/app/src/main/res/layout/high_scores_layout.xml
+++ b/app/src/main/res/layout/high_scores_layout.xml
@@ -38,10 +38,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Number"
+                android:text="Index"
                 android:id="@+id/scoreIndexTextView"
                 android:textColor="@color/black"
                 android:layout_marginTop="26dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="1"
                 />
@@ -75,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Date"
+                android:text="Entered On"
                 android:id="@+id/dateTextView"
                 android:textColor="@color/black"
                 android:layout_alignTop="@+id/scoreTextView"
