--- a/app/src/main/res/layout/high_scores_list_item.xml
+++ b/app/src/main/res/layout/high_scores_list_item.xml
@@ -14,9 +14,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Number"
         android:id="@+id/scoreIndexTextView"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="26dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         />
 
@@ -28,8 +29,9 @@
         android:text="Score"
         android:id="@+id/scoreTextView"
         android:layout_marginTop="26dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         />
 
@@ -39,8 +41,9 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Level"
         android:id="@+id/levelTextView"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="26dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         />
 
@@ -51,9 +54,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Date"
         android:id="@+id/dateTextView"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_alignTop="@+id/scoreTextView"
         android:layout_marginTop="26dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         />
 
