--- a/app/src/main/res/layout-land/main_layout.xml
+++ b/app/src/main/res/layout-land/main_layout.xml
@@ -3,7 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/screenshot_rotate"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,6 +23,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="25dp"
             android:text="@string/app_name"
+            android:background="@color/aqua"
+            android:textColor="@color/beige"
 
             />
     </RelativeLayout>
