--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+    android:id="@+id/splashLayout"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/screenshot_cover"
+    >
 
     <TextView
         android:id="@+id/splashTextView"
@@ -11,5 +16,6 @@
         android:textSize="40sp"
         android:gravity="center_vertical"
         android:text="@string/app_name"
+        android:textColor="@color/white"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
