Added the options dialog to the main fragment

--- a/app/src/main/res/layout-land/main_layout.xml
+++ b/app/src/main/res/layout-land/main_layout.xml
@@ -44,7 +44,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="12dp" />
 
         <Button
             android:id="@+id/highScoresButton"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/newGameButton"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="12dp"
             android:text="@string/high_scores"
             />
 
@@ -60,11 +60,23 @@
             android:id="@+id/instructionsButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="12dp"
             android:layout_below="@+id/highScoresButton"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:text="@string/instructions"
+
+            />
+
+        <Button
+            android:id="@+id/optionsButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_below="@+id/instructionsButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="@string/options"
 
             />
 
