--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="beige">#ECD078</color>
     <color name="aqua">#53777A</color>
     <color name="pink">#FF69B4</color>
+    <color name="dark_green">#197319</color>
+    <color name="orange">#ee7600</color>
+    <color name="purple">#551A8B</color>
+    <color name="sand">#A78D84</color>
+
+
 
 
 </resources>
