--- a/app/src/main/res/layout-land/high_scores_layout.xml
+++ b/app/src/main/res/layout-land/high_scores_layout.xml
@@ -32,7 +32,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="4"
+            android:weightSum="5"
             android:layout_alignParentBottom="true"
             >
 
@@ -80,6 +80,18 @@
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Entered On"
+                android:textColor="@color/beige"
+                android:layout_alignTop="@+id/scoreTextView"
+                android:layout_marginTop="26dp"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:id="@+id/difficultyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Difficulty"
                 android:textColor="@color/beige"
                 android:layout_alignTop="@+id/scoreTextView"
                 android:layout_marginTop="26dp"
